--- a/app/src/main/res/layout/fragment_juego_parejas.xml
+++ b/app/src/main/res/layout/fragment_juego_parejas.xml
@@ -16,45 +16,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/fondo" />
+            app:srcCompat="@drawable/fondo2" />
 
     </FrameLayout>
 
-    <TextView
-        android:id="@+id/j1txt"
-        android:layout_width="47dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:background="#74FB7703"
-        android:gravity="center"
-        android:text="J1: 0"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/j2txt"
-        android:layout_width="47dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:background="#74FB7703"
-        android:gravity="center"
-        android:text="J2: 0"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btnSonido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/j2txt"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/sound_on" />
+
 
     <include
         layout="@layout/fichas"
