--- a/app/src/main/res/layout/fragment_juego_parejas.xml
+++ b/app/src/main/res/layout/fragment_juego_parejas.xml
@@ -20,6 +20,18 @@
 
     </FrameLayout>
 
+    <ImageButton
+        android:id="@+id/bBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginTop="12dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="8dp"
+        android:src="@drawable/ic_back_arrow"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <ImageButton
         android:id="@+id/btnSonido"
