incorporacion de juegos

--- a/app/src/main/res/layout/fragment_juego_animals.xml
+++ b/app/src/main/res/layout/fragment_juego_animals.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.game.JuegoAnimals">
+    tools:context=".view.JuegoAnimals">
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:src="@drawable/congratulation"
+        android:src="@drawable/congratulation2"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
