--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,7 @@
             android:layout_margin="15dp"
             android:backgroundTint="#2196F3"
             android:padding="10dp"
-            android:text="play friuts"
+            android:text="play fruits"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
