--- a/app/src/main/res/layout/fragment_password_recovery.xml
+++ b/app/src/main/res/layout/fragment_password_recovery.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.password_recovery.PasswordRecoveryFragment">
+    tools:context=".view.PasswordRecoveryFragment">
 
     <ImageButton
         android:id="@+id/bBack"
